--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ h1 {
   font-size: 40px;
   color: yellow;
   font-family: var(--font-family);
+  margin-bottom: 50px;
 }
 aside h1 {
   margin-bottom: 20px;
@@ -42,7 +43,7 @@ aside h1 {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 50px;
+  gap: 10px;
   width: max-content;
   height: min-content;
   background-color: #09097956;
@@ -239,8 +240,9 @@ li {
   font-size: 30px;
   background-color: transparent;
   border: none;
-  color: orange;
+  color: rgb(255, 89, 0);
   padding: 5px;
+  opacity: 0.5;
 }
 #completed:hover {
   cursor: pointer;
@@ -284,7 +286,7 @@ li {
 }
 .wrapper {
   font-size: 20px;
-  color: orange;
+  color: rgb(255, 89, 0);
 }
 
 .clearCompletedBox {
@@ -329,4 +331,15 @@ li {
 }
 .test {
   opacity: 0.5;
+}
+#numberOfToDos {
+  width: calc(100% - 20px);
+  color: rgb(255, 89, 0);
+  font-family: sans-serif;
+  opacity: 0.7;
+}
+#number {
+  color: yellow;
+  font-weight: 700;
+  font-size: 20px;
 }
