--- a/style.css
+++ b/style.css
@@ -343,3 +343,72 @@ li {
   font-weight: 700;
   font-size: 20px;
 }
+.alert {
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #0a0e31;
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
+  filter: drop-shadow(0 0 10px rgb(255, 102, 0));
+  position: absolute;
+  padding: 10px;
+  transition: 1s ease;
+}
+.blur {
+  filter: blur(5px) !important;
+}
+.showAlert {
+  display: flex;
+  animation: popIn 0.8s ease;
+}
+
+.fadeOut {
+  animation: fadeOut 0.8s ease forwards;
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes popIn {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.alertMessage {
+  font-family: sans-serif;
+  font-size: 16px;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  line-height: 1.2;
+  font-weight: 700;
+}
+
+.okay {
+  width: calc(100% - 20px);
+  padding: 10px;
+  background-image: linear-gradient(
+    90deg,
+    rgb(33, 11, 80),
+    rgb(11, 11, 135),
+    rgb(33, 11, 80)
+  );
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  filter: drop-shadow(0 0 5px blue);
+  text-transform: uppercase;
+}
